--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,11 @@ body {
 
 .shopping-counter {
     background: #FFAF19;
-    font-style: 8px;
+    font-size: 8px;
     line-height: 9px;
     color: #000;
     display: block;
-    padding: 5px;
+    padding: 3px;
     border-radius: 50%;
     position: absolute;
     right: 0;
